update tensorflow basics

--- a/deep-learning-fundamentals/deep_learning_fundamentals_tensorflow/tensorflow_basics.ipynb
+++ b/deep-learning-fundamentals/deep_learning_fundamentals_tensorflow/tensorflow_basics.ipynb
@@ -1,13 +1,30 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 2,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "# Tensorflow Baiscs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Library/Frameworks/Python.framework/Versions/3.4/lib/python3.4/importlib/_bootstrap.py:321: FutureWarning: Conversion of the second argument of issubdtype from `float` to `np.floating` is deprecated. In future, it will be treated as `np.float64 == np.dtype(float).type`.\n",
+      "  return f(*args, **kwds)\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
-    "import matplotlib.pyplot as plt"
+    "import matplotlib.pyplot as Aplt\n",
+    "import tensorflow as tf"
    ]
   },
   {
@@ -38,18 +55,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Library/Frameworks/Python.framework/Versions/3.4/lib/python3.4/importlib/_bootstrap.py:321: FutureWarning: Conversion of the second argument of issubdtype from `float` to `np.floating` is deprecated. In future, it will be treated as `np.float64 == np.dtype(float).type`.\n",
-      "  return f(*args, **kwds)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import tensorflow as tf"
    ]
@@ -511,7 +519,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## TensorFlow Math\n",
+    "## 3. TensorFlow Math\n",
     "\n",
     "Getting the input is great, but now you need to use it. You're going to use basic math functions that everyone knows and loves - add, subtract, multiply, and divide - with tensors. (There's many more math functions you can check out in the [documentation](https://www.tensorflow.org/api_guides/python/math_ops).)"
    ]
@@ -520,7 +528,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Addition\n",
+    "### 3.1 Addition\n",
     "\n",
     "We’ll start with the add function. The `tf.add()` function does exactly what you expect it to do. It takes in two numbers, two tensors, or one of each, and returns their sum as a tensor."
    ]
@@ -558,7 +566,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Subtraction and Multiplication\n",
+    "### 3.2 Subtraction and Multiplication\n",
     "Here’s an example with subtraction and multiplication.\n",
     "\n",
     "```python\n",
@@ -566,9 +574,14 @@
     "y = tf.multiply(2, 5)  # 10\n",
     "```\n",
     "\n",
-    "The x tensor will evaluate to 6, because 10 - 4 = 6. The y tensor will evaluate to 10, because 2 * 5 = 10. That was easy!\n",
-    "\n",
-    "### Converting types\n",
+    "The x tensor will evaluate to 6, because 10 - 4 = 6. The y tensor will evaluate to 10, because 2 * 5 = 10. That was easy!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 3.3 Converting types\n",
     "\n",
     "It may be necessary to convert between types to make certain operators work together. For example, if you tried the following, it would fail with an exception:\n",
     "\n",
@@ -627,7 +640,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## TensorFlow Softmax\n",
+    "## 4. TensorFlow Softmax\n",
     "\n",
     "> The softmax function squashes it's inputs, typically called <b style='color: red'>logits</b> or logit scores, to be between 0 and 1 and also normalizes the outputs such that they all sum up to 1. \n",
     "\n",
@@ -663,7 +676,7 @@
     "    \n",
     "    with tf.Session() as sess:\n",
     "        # Feed in the logit data\n",
-    "        output = sess.run(softmax,   feed_dict={logits: logit_data} )\n",
+    "        output = sess.run(softmax, feed_dict={logits: logit_data} )\n",
     "\n",
     "    return output\n",
     "\n",
@@ -674,7 +687,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## TensorFlow Cross Entropy\n",
+    "## 5. TensorFlow Cross Entropy\n",
     "\n",
     "When you're using softmax, your output is a vector that contains probability distribution over output logits. You can express your data labels as a vector using what's called `one-hot encoding`.\n",
     "\n",
@@ -724,34 +737,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(3,)\n",
-      "0.783969\n"
+      "[[1.2 0.9 0.4]\n",
+      " [0.8 0.9 1.4]\n",
+      " [1.2 0.9 1.1]]\n",
+      "[[1. 0. 0.]\n",
+      " [0. 0. 1.]\n",
+      " [0. 1. 0.]]\n",
+      "prob distribution:\n",
+      " [[0.45659032 0.3382504  0.20515925]\n",
+      " [0.25462854 0.28140804 0.46396342]\n",
+      " [0.37797815 0.28001305 0.34200874]]\n",
+      "cross entropy: [0.78396875 0.7679496  1.272919  ]\n",
+      "cross entropy mean: 0.9416124\n"
      ]
     }
    ],
    "source": [
-    "# probability distribution vector\n",
-    "prod_dist_data = np.array([0.45659032, 0.3382504, 0.20515925])\n",
-    "# one hot vector\n",
-    "one_hot_data = np.array([1.0, 0.0, 0.0])\n",
+    "# # probability distribution vector\n",
+    "# prod_dist_data = np.array([0.45659032, 0.3382504, 0.20515925])\n",
+    "# # one hot vector\n",
+    "# one_hot_data = np.array([1.0, 0.0, 0.0])\n",
     "\n",
-    "print(prod_dist_data.shape)\n",
+    "logit_data = np.array([[1.2, 0.9, 0.4],\n",
+    "                       [0.8, 0.9, 1.4],\n",
+    "                       [1.2, 0.9, 1.1]])\n",
     "\n",
-    "prod_dist = tf.placeholder(tf.float32)\n",
-    "one_hot = tf.placeholder(tf.float32)\n",
+    "one_hot_data = np.array([[1.0, 0.0, 0.0],\n",
+    "                         [0.0, 0.0, 1.0],\n",
+    "                         [0.0, 1.0, 0.0]])\n",
+    "print(logit_data)\n",
+    "print(one_hot_data)\n",
     "\n",
-    "cross_entropy = -tf.reduce_sum(tf.multiply(one_hot, tf.log(prod_dist)))\n",
+    "logit_placeholder = tf.placeholder(tf.float32)\n",
+    "one_hot_placeholder = tf.placeholder(tf.float32)\n",
+    "\n",
+    "prod_dist=tf.nn.softmax(logit_placeholder)\n",
+    "\n",
+    "# NOTE:\n",
+    "# 1. We applied tf.log to each element in the prod_dist matrix\n",
+    "# 2. We used tf.reduce_sum and tf.multiply to compute the dot-product of each \n",
+    "#    probability distribution and one hot vector \n",
+    "cross_entropy = -tf.reduce_sum(tf.multiply(tf.log(prod_dist), one_hot_placeholder), axis=1)\n",
+    "reduced_mean = tf.reduce_mean(cross_entropy)\n",
     "\n",
     "with tf.Session() as sess:\n",
-    "    output = sess.run(cross_entropy, feed_dict={prod_dist:prod_dist_data, one_hot:one_hot_data})\n",
-    "    print(output)"
+    "    pd, ce, rm = sess.run([prod_dist, cross_entropy, reduced_mean], feed_dict={logit_placeholder:logit_data, \n",
+    "                                                one_hot_placeholder:one_hot_data})\n",
+    "    print('prob distribution:\\n', pd)\n",
+    "    print('cross entropy:', ce)\n",
+    "    print('cross entropy mean:', rm)"
    ]
   },
   {
@@ -788,7 +829,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -798,13 +839,13 @@
       "logit shape (3, 3)\n",
       "one hot shape (3, 3)\n",
       "cross entropy: [0.78396875 0.7679496  1.2729189 ]\n",
-      "cross entropy mean 0.9416124\n"
+      "cross entropy mean: 0.9416124\n"
      ]
     }
    ],
    "source": [
     "logit = np.array([[1.2, 0.9, 0.4],[0.8, 0.9, 1.4],[1.2, 0.9, 1.1]])\n",
-    "one_hot = np.array([[1.0, 0.0, 0.0],[0, 0, 1.0],[0, 1.0, 0]])\n",
+    "one_hot = np.array([[1.0, 0.0, 0.0],[0.0, 0.0, 1.0],[0, 1.0, 0]])\n",
     "\n",
     "print('logit shape', logit.shape)\n",
     "print('one hot shape', one_hot.shape)\n",
@@ -812,21 +853,67 @@
     "logit_placeholder = tf.placeholder(tf.float32)\n",
     "one_hot_placeholder = tf.placeholder(tf.float32)\n",
     "\n",
-    "# NOTE: you should take the tf.log() of the softmax\n",
-    "cross_entropy = tf.nn.softmax_cross_entropy_with_logits(logits=logit_placeholder, labels=one_hot_placeholder)\n",
+    "# tf.nn.softmax_cross_entropy_with_logits returns a 1-D tensor of length batch_size \n",
+    "# of the same type as logits. \n",
+    "# Each element in the returned tensor is a cross entropy for a logit with its corresponding \n",
+    "# one hot vector. \n",
+    "# To compute the average cross entropy of all training examples, we use \n",
+    "# tf.reduce_mean function.\n",
+    "cross_entropy = tf.nn.softmax_cross_entropy_with_logits(logits=logit_placeholder, \n",
+    "                                                        labels=one_hot_placeholder)\n",
+    "reduced_mean = tf.reduce_mean(cross_entropy)\n",
     "with tf.Session() as sess:\n",
-    "    output = sess.run(cross_entropy, feed_dict={logit_placeholder:logit, one_hot_placeholder:one_hot})\n",
-    "    print('cross entropy:', output)\n",
-    "    \n",
-    "# tf.nn.softmax_cross_entropy_with_logits returns a 1-D tensor of length batch_size of the same type \n",
-    "# as logits. \n",
-    "# Each element in the returned tensor is a cross entropy for a logit with its corresponding one hot vector. \n",
-    "# To compute the average cross entropy of all training examples, we use tf.reduce_mean function.\n",
-    "cross_entropy = tf.reduce_mean(tf.nn.softmax_cross_entropy_with_logits(logits=logit_placeholder, \n",
-    "                                                                       labels=one_hot_placeholder))\n",
+    "    ce, rm = sess.run([cross_entropy, reduced_mean], feed_dict={logit_placeholder:logit, \n",
+    "                                                                one_hot_placeholder:one_hot})\n",
+    "    print('cross entropy:', ce)\n",
+    "    print('cross entropy mean:', rm)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can `tf.nn.sparse_softmax_cross_entropy_with_logits` that takes logits and 0-indexed labels (instead of on-hot vectors) as inputs:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "logit shape (3, 3)\n",
+      "label shape (3,)\n",
+      "cross entropy: [0.78396875 0.76794955 1.27291891]\n",
+      "cross entropy mean: 0.9416124037567024\n",
+      "loss shape: [3]\n"
+     ]
+    }
+   ],
+   "source": [
+    "logit = np.array([[1.2, 0.9, 0.4],[0.8, 0.9, 1.4],[1.2, 0.9, 1.1]])\n",
+    "label = np.array([0,2,1])\n",
+    "\n",
+    "print('logit shape', logit.shape)\n",
+    "print('label shape', label.shape)\n",
+    "\n",
+    "logit_placeholder = tf.placeholder(tf.float32)\n",
+    "label_placeholder = tf.placeholder(tf.float32)\n",
+    "\n",
+    "logits_shape = tf.shape(logits)\n",
+    "cross_entropy = tf.nn.sparse_softmax_cross_entropy_with_logits(logits=logit, labels=label)\n",
+    "lshape = tf.shape(loss)\n",
+    "reduced_mean = tf.reduce_mean(loss)\n",
+    "\n",
     "with tf.Session() as sess:\n",
-    "    output = sess.run(cross_entropy, feed_dict={logit_placeholder:logit, one_hot_placeholder:one_hot})\n",
-    "    print('cross entropy mean', output)"
+    "    ce,rm = sess.run([cross_entropy, reduced_mean])\n",
+    "    ls = sess.run(lshape)\n",
+    "    print('cross entropy:', ce)\n",
+    "    print('cross entropy mean:', rm)\n",
+    "    print('loss shape:', ls)"
    ]
   },
   {
@@ -855,7 +942,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## TensorFlow ReLU\n",
+    "## 6. TensorFlow ReLU\n",
     "\n",
     "* ReLU, a non-linear activation function, or rectified linear unit. The ReLU function is 0 for negative inputs and x for all inputs x>0.\n",
     "* TensorFlow provides the ReLU function as <b style='color: red'>tf.nn.relu()</b>, as shown below.\n",
@@ -931,7 +1018,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## TensorFlow Gradient Descent Optimizer"
+    "## 7. TensorFlow Gradient Descent Optimizer"
    ]
   },
   {
@@ -1189,7 +1276,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Difference between tf.contrib.layers.fully_connected and tf.layers.dense\n",
+    "## 8. Tensorflow Discussion"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 8.1. Difference between tf.contrib.layers.fully_connected and tf.layers.dense\n",
     "\n",
     "They are essentially the same, [tf.contrib.layers.fully_connected](https://www.tensorflow.org/api_docs/python/tf/contrib/layers/fully_connected) calls [tf.layers.dense](https://www.tensorflow.org/api_docs/python/tf/layers/dense)\n",
     "Layers in tf.layers (and in tf.contrib.layers) are part of the \"higher-level\" API of tensorflow that takes care of initializing weights and biases. However you can choose an initializer for them.\n",
@@ -1284,27 +1378,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Variable"
+    "### 8.2. Difference between tf.Variable and tf.get_variable"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[document](https://jhui.github.io/2017/03/08/TensorFlow-variable-sharing/)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Difference between tf.Variable and tf.get_variable"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "* Read [document](https://jhui.github.io/2017/03/08/TensorFlow-variable-sharing/)\n",
     "* [`tf.Variable`](https://www.tensorflow.org/api_docs/python/tf/Variable) will always create a new variable and thus `tf.Variable` requires that an `initial_value` be specified. \n",
     "\n",
     "```\n",
@@ -1451,7 +1532,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## References\n",
+    "## 9. References\n",
     "\n",
     "* [Hello tensorflow](https://www.oreilly.com/learning/hello-tensorflow)\n",
     "* [TensorFlow tutorials](https://www.tensorflow.org/tutorials/)\n",
@@ -1469,7 +1550,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [default]",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -1483,7 +1564,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.5"
+   "version": "3.4.4"
   }
  },
  "nbformat": 4,
