Update tensorboard introduction

--- a/deep_learning_fundamentals/deep_learning_fundamentals_tensorflow/tensorboard_introduction(in chinese).ipynb
+++ b/deep_learning_fundamentals/deep_learning_fundamentals_tensorflow/tensorboard_introduction(in chinese).ipynb
@@ -326,7 +326,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "2.2.1 创建tensorflow的默认会话："
+    "2.2.1 重制默认计算图：\n",
+    "\n",
+    "如果你使用jupyter notebook or IPython 多次执行了图计算，merged = tf.summary.merge_all() 可能会引起 `InvalidArgumentError: You must feed a value for placeholder tensor 'Placeholder_1' with dtype float` 之类的异常。引起异常的原因，在[这篇stackoverflow讨论](https://stackoverflow.com/questions/35114376/error-when-computing-summaries-in-tensorflow)中有说明:\n",
+    "\n",
+    "> One pitfall when using IPython to build a TensorFlow model is that functions like tf.merge_all_summaries() will remember every summary created in the current session, including cells that failed with an error. This is a result of TensorFlow using a default graph to collect all of the operations, summaries, etc. that are created in a process, unless you specify the graph explicitly.\n",
+    "\n",
+    "我这里用了最简单的解决方法：重制默认计算图"
    ]
   },
   {
