add histogram explained

--- a/deep_learning_fundamentals/deep_learning_fundamentals_tensorflow/tensorboard_introduction(in chinese).ipynb
+++ b/deep_learning_fundamentals/deep_learning_fundamentals_tensorflow/tensorboard_introduction(in chinese).ipynb
@@ -1049,7 +1049,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 3.4  `Graph`\n",
+    "### 3.4  `GRAPH`\n",
     "\n",
     "这个应该是最常用的面板了。很多时候我们的模型很复杂，包含很多层，我们想要总体上看下构建的网络到底是什么样的，这时候就用到 GRAPHS 面板了，在这里可以展示出你所构建的网络整体结构，显示数据流的方向和大小，也可以显示训练时每个节点的用时、耗费的内存大小以及参数多少。\n",
     "\n",
@@ -1088,8 +1088,8 @@
     "<img src='tensorboard_images/histogram_detail.png'/>\n",
     "\n",
     "图中：\n",
-    "* 横轴表示权重值，纵轴表示训练步数。颜色越深表示时间越早，越浅表示时间越晚（越接近训练结束）。\n",
-    "* HISTOGRAMS 还有个 Histogram mode，有两个选项：OVERLAY 和 OFFSET。选择 OVERLAY 时横轴为权重值，纵轴为频数，每一条折线为训练步数。颜色深浅与上面同理。默认为 OFFSET 模式。"
+    "* 横轴表示参数值，纵轴表示训练步数。颜色越深表示时间越早，越浅表示时间越晚（越接近训练结束）。\n",
+    "* HISTOGRAMS 还有个 Histogram mode，有两个选项：OVERLAY 和 OFFSET。选择 OVERLAY 时横轴为参数值，纵轴为频数，每一条折线为训练步数。颜色深浅与上面同理。默认为 OFFSET 模式。"
    ]
   },
   {
